feat: gemini ai 추가 및 테스트 코드 구현